--- a/recommend.html
+++ b/recommend.html
@@ -6,7 +6,86 @@
     <title>แนะนำแหล่งการเรียนรู้ด้วยตนเอง</title>
     <link rel="stylesheet" href="recommend.css">
 </head>
-<body>
-    
+<body >
+    <nav>
+        <a href="">My logo <img src="" alt=""></a>
+        <ul class="nav-menu">
+            <li><a href="">หน้าหลัก</a></li>
+            <li><a href="">การศึกษา</a></li>
+            <li><a href="">อื่นๆ</a></li>
+            <li><a href="">ช่องทางติดต่อ</a></li>
+        </ul>
+    </nav>
+
+    <!-- contant -->
+    <div class="contant">
+        <div class="con-head"><h2>บทความการศึกษา</h2></div>
+        <div class="con-item">
+            <div class="item-sub">
+                <img src="https://i.pinimg.com/736x/e0/61/1b/e0611b7ac740dbe4b86f6148d4083f09.jpg" alt="">
+                <h4>หัวข้อ</h4>
+                <p>เรื่องย่อ</p>
+                <button class="btn-sub">บทความเต็ม</button>
+            </div>
+
+            <div class="item-sub">
+                <img src="https://i.pinimg.com/736x/e0/61/1b/e0611b7ac740dbe4b86f6148d4083f09.jpg" alt="">
+                <h4>หัวข้อ</h4>
+                <p>เรื่องย่อ</p>
+                <button class="btn-sub">บทความเต็ม</button>
+            </div>
+
+            <div class="item-sub">
+                <img src="https://i.pinimg.com/736x/e0/61/1b/e0611b7ac740dbe4b86f6148d4083f09.jpg" alt="">
+                <h4>หัวข้อ</h4>
+                <p>เรื่องย่อ</p>
+                <button class="btn-sub">บทความเต็ม</button>
+            </div>
+            <div class="item-sub">
+                <img src="https://i.pinimg.com/736x/e0/61/1b/e0611b7ac740dbe4b86f6148d4083f09.jpg" alt="">
+                <h4>หัวข้อ</h4>
+                <p>เรื่องย่อ</p>
+                <button class="btn-sub">บทความเต็ม</button>
+            </div>
+
+            <div class="item-sub">
+                <img src="https://i.pinimg.com/736x/e0/61/1b/e0611b7ac740dbe4b86f6148d4083f09.jpg" alt="">
+                <h4>หัวข้อ</h4>
+                <p>เรื่องย่อ</p>
+                <button class="btn-sub">บทความเต็ม</button>
+            </div>
+
+            <div class="item-sub">
+                <img src="https://i.pinimg.com/736x/e0/61/1b/e0611b7ac740dbe4b86f6148d4083f09.jpg" alt="">
+                <h4>หัวข้อ</h4>
+                <p>เรื่องย่อ</p>
+                <button class="btn-sub">บทความเต็ม</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- discription -->
+    <div class="discrip"></div>
+
+    <footer>
+        <div id="m1" class="foot-con">
+            <ul class="contact">
+                <h2>ติดต่อขอใช้บทความ</h2><br>
+                <li>โทร. 082-4820-380</li>
+                <li>อีเมล. wuttisak.yu@gmatl.com</li>
+            </ul>
+            <ul class="contact">
+                <h2>โซเชียลมีเดี่ย</h2><br>
+                <li>เฟสบุ๊ค. wuttisak yusuwan</li>
+            </ul>
+            <ul class="contact">
+                <h2>ออกแบบและสร้าง</h2><br>
+                <li> วุฒิศักดิ์ อยู่สุวรรณ์</li>
+            </ul>
+        </div>
+        <div class="last">
+            copyright 2024
+        </div>
+    </footer>
 </body>
 </html>
