--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="nav-con">
             <div class="logo"><img src="" alt="My Logo"></div>
             <ul class="menu">
-                <li><a href="">หน้าหลัก</a></li>
-                <li><a href="">หน้าหลัก</a></li>
-                <li><a href="">หน้าหลัก</a></li>
+                <li><a href="#c1">หน้าหลัก</a></li>
+                <li><a href="recommend.html">บทความอื่นๆ</a></li>
+                <li><a href="#m1">ช่องทางติดต่อ</a></li>
             </ul>
         </div>
     </nav>
@@ -25,7 +25,7 @@
     </div>
 
     <!-- content -->
-    <div class="contant">
+    <div id="c1" class="contant">
         <div>
             <h2>บทความเกี่ยวกับการศึกษา</h2>
         </div>
@@ -53,7 +53,7 @@
         </div>
             
         <div class="btn-all">
-            <button><a href="">all-abcde</a></button>
+            <button><a href="recommend.html">บทความที่เกี่ยวข้อง</a></button>
         </div>
 
         <div>
@@ -80,6 +80,10 @@
                 <button>อ่านต่อ</button>
             </div>
         </div>
+        
+        <div class="btn-all">
+            <button><a href="recommend.html">บทความที่เกี่ยวข้อง</a></button>
+        </div>
 
     </div>
 
@@ -99,7 +103,7 @@
     </div>
 
     <footer>
-        <div class="foot-con">
+        <div id="m1" class="foot-con">
             <ul class="contact">
                 <h2>ติดต่อขอใช้บทความ</h2><br>
                 <li>โทร. 082-4820-380</li>
